[package]
name = "chain-support"
version = "0.2.0"
edition = "2021"

[dependencies]
aleph_client = { git = "https://github.com/Cardinal-Cryptography/aleph-node.git", rev = "c8eb94cfb066485aa2d14f65110a26edc54dda9a" }
ac-node-api = { git = "https://github.com/Cardinal-Cryptography/substrate-api-client.git", branch = "polkadot-v0.9.19" }

anyhow = "1.0"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false,  features = ["derive"]}
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.17.0", features = [ "rt-multi-thread", "time", "sync" ] }
thiserror = "1.0"

common = { path = "../common" }
event-derive = { path = "src/event_listening/derive" }
