[package]
name = "chain-support"
version = "0.2.0"
edition = "2021"

[dependencies]
aleph_client = { git = "https://github.com/Cardinal-Cryptography/aleph-node.git", branch = "release-5" }
ac-node-api = { git = "https://github.com/Cardinal-Cryptography/substrate-api-client.git", tag = "polkadot-v0.9.13.b2bfc0c3" }
substrate-api-client = { git = "https://github.com/Cardinal-Cryptography/substrate-api-client.git", tag = "polkadot-v0.9.13.b2bfc0c3" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", features = ["full_crypto"] }

anyhow = "1.0"
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false,  features = ["derive"]}
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.17.0", features = [ "rt-multi-thread", "time", "sync" ] }
thiserror = "1.0"

common = { path = "../common" }
event-derive = { path = "src/event_listening/derive" }
