[package]
name = "set-up"
version = "0.2.0"
edition = "2021"

[dependencies]
aleph_client = { git = "https://github.com/Cardinal-Cryptography/aleph-node.git", rev = "c8eb94cfb066485aa2d14f65110a26edc54dda9a" }

clap = { version = "3.0.0", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.5.8" }

chain-support = { path = "../chain-support" }
