[package]
name = "set-up"
version = "0.2.0"
edition = "2021"

[dependencies]
aleph_client = { git = "https://github.com/Cardinal-Cryptography/aleph-node.git", branch = "release-5" }
substrate-api-client = { git = "https://github.com/Cardinal-Cryptography/substrate-api-client.git", tag = "polkadot-v0.9.13.b2bfc0c3" }

clap = { version = "3.0.0", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.5.8" }

chain-support = { path = "../chain-support" }
