[package]
name = "set-up"
version = "0.2.0"
edition = "2021"

[dependencies]
aleph_client = { git = "https://github.com/Cardinal-Cryptography/aleph-node.git", rev = "795e7efa5d1cadefaaed7af777488bc7a1662008" }

clap = { version = "3.0.0", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.23.0", features = ["rt-multi-thread"] }
toml = { version = "0.5.8" }

chain-support = { path = "../chain-support" }
