[package]
name = "scenarios-transfer"
version = "0.1.0"
edition = "2021"

[dependencies]
aleph_client = { git = "https://github.com/Cardinal-Cryptography/aleph-node.git", rev = "928fdf1fa0c16855d7d31f59766646562fcbf3f2" }

chain-support = { path = "../../chain-support" }
common = { path = "../../common" }
scenarios-support = { path = "../support" }

anyhow = "1.0"
async-trait = "0.1"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false,  features = ["derive"]}
log = "0.4"
parse_duration = "2.1.1"
serde = { version = "1.0", features = ["derive"] }
rand = { version = "0.8.5", features = ["alloc"] }
tokio = { version = "1.17.0", features = ["rt-multi-thread"] }
