[package]
name = "scenarios-vesting"
version = "0.1.0"
edition = "2021"

[dependencies]
aleph_client = { git = "https://github.com/Cardinal-Cryptography/aleph-node.git", rev = "c8eb94cfb066485aa2d14f65110a26edc54dda9a" }
pallet-vesting = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19", default-features = false }

chain-support = { path = "../../chain-support" }
common = { path = "../../common" }
scenarios-support = { path = "../support" }

anyhow = "1.0"
async-trait = "0.1"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false,  features = ["derive"]}
rand = { version = "0.8.5", features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.17.0", features = ["rt-multi-thread"] }
