[package]
name = "scenarios-vesting"
version = "0.1.0"
edition = "2021"

[dependencies]
aleph_client = { git = "https://github.com/Cardinal-Cryptography/aleph-node.git", branch = "traffic-maker" }

chain-support = { path = "../../chain-support" }
common = { path = "../../common" }

anyhow = "1.0"
async-trait = "0.1"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false,  features = ["derive"]}
rand = { version = "0.8.5", features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.17.0", features = ["rt-multi-thread"] }
